--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
           </div>
         </a>
         <button class="button__hamburger">
-          <img
-            src="images/icons/hamburger.svg"
-            class="button__hamburger-icon"
-            alt="Hamburger button"
-          />
+          <i class="button__hamburger-icon"></i>
         </button>
         <div class="header__menu">
           <nav class="header__nav">
